[tool.poetry]
name = "comfyui-easy-api"
version = "0.1.0"
description = "make easy for utilizing ComfyUI API"
authors = ["injet-zhou <zhouyingjie@sinkcode.cn>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
diskcache = "^5.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
