[tool.poetry]
name = "ComfyUI-extra-API"
version = "0.1.0"
description = "Add more endpoints to make easy for utilizing ComfyUI API"
authors = ["injet-zhou <zhouyingjie@sinkcode.cn>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
diskcache = "^5.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "comfyui_extra_api" # Unique identifier for your node. Immutable after creation.
description = "Add more endpoints to make easy for utilizing ComfyUI API"
version = "1.0.5" # Custom Node version. Must be semantically versioned.
dependencies  = ['diskcache', 'tqdm'] # Filled in from requirements.txt

[project.urls]
Repository = "https://github.com/injet-zhou/comfyui_extra_api"

[tool.comfy]
PublisherId = "injet"
DisplayName = "ComfyUI Extra API"
